<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="20dp"
    card_view:cardBackgroundColor="#3E4557"
    card_view:cardMaxElevation="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_payment_option"
            android:textSize="24sp"
            android:textColor="#b6b7ba"
            android:fontFamily="sans-serif-medium"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="20dp"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/down_arrow"
            android:src="@drawable/baseline_keyboard_arrow_down_24"
            android:layout_marginTop="5dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            card_view:layout_constraintTop_toBottomOf="@id/text_view"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/collapsable_view">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hdfc_bank"
                    android:textSize="30sp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-medium"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/pnb_bank" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/idfc_bank" />

            </RadioGroup>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cta"
                android:text="@string/continuew"
                android:textColor="@color/white"
                android:background="@color/purple_500"
                android:layout_margin="8dp"
                android:textSize="16sp"
                android:padding="16dp"
                android:elevation="8dp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>